--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Bem-vindo ao Meu Projeto</h1>
+    <img src="images/minha-imagem.jpg" alt="Descrição da imagem">
 </body>
 </html>
