--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Meu Projeto</title>
 </head>
 <body>
-    <h1>Bem-vindo ao Meu Projeto</h1>
-    <img src="images/minha-imagem.jpg" alt="Descrição da imagem">
+    <h1>Vai umazinha aí, fessor?</h1>
+    <img src="cerveja boa.jpeg" alt="Cerveja Gelada">
 </body>
 </html>
